add_objects_selectors

--- a/js_fundamentals_5_6/style.css
+++ b/js_fundamentals_5_6/style.css
@@ -7,3 +7,12 @@
     background-color: rgb(199, 29, 29);
     font-size: 20px;
 }
+
+.product{
+    height: 100px;
+}
+
+.shield{
+    border: 2px solid black;
+    background-color: blue;
+}
